# python_file_manager

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: file_manager.conf
docker/: Dockerfile
src/: __init__.py  file_manager.py
src/modules/: __init__.py  communications.py  file_manage_init.py  file_manager_init.py  log_manager.py  parse_args.py
src/utils/: client.py  server.py
tests/: conftest.py  test_file_manager.py
