[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A project utilizing standard Python libraries."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
# List optional test or dev dependencies here (e.g., pytest, ruff)
test = [
    "pytest>=8.0.0",
]